exclude report html file

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Assignment3/Optimization HW3 Report.docx
 .DS_Store
 Assignment3/*.zip
 Assignment4/*.pdf
+Assignment4/Optimization Homework 4 Report.html
