exclude zip file in Assignment4 directory

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Assignment3/Optimization HW3 Report.docx
 Assignment3/*.zip
 Assignment4/*.pdf
 Assignment4/Optimization Homework 4 Report.html
+Assignment4/*.zip
